src/github.com/evanli18/cncf/homework/m12/yaml/specs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: user
spec:
  gateways:
    - user-gw
  hosts:
    - '*'
  http:
    - route:
      - destination:
          host: user
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: user-gw
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        name: user-gw
        number: 8081
        protocol: HTTP
